WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
234569
Don't create LocalStorage database for read if it does not exist
https://bugs.webkit.org/show_bug.cgi?id=234569
Summary
Don't create LocalStorage database for read if it does not exist
Sihui Liu
Reported
2021-12-21 10:40:11 PST
...
Attachments
Patch
(9.41 KB, patch)
2021-12-21 10:45 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(10.17 KB, patch)
2021-12-23 16:40 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Patch for landing
(10.16 KB, patch)
2021-12-23 16:55 PST
,
Sihui Liu
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Sihui Liu
Comment 1
2021-12-21 10:45:21 PST
Created
attachment 447734
[details]
Patch
Alex Christensen
Comment 2
2021-12-23 10:22:39 PST
Comment on
attachment 447734
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=447734&action=review
> Tools/TestWebKitAPI/Tests/WebKitCocoa/LocalStorageDatabaseTracker.mm:35 > +static NSString *expectedMessage;
Add an ivar to LocalStorageUIDelegate instead of a new static global, which I've been working to remove in TestWebKitAPI. [[LocalStorageUIDelegate alloc] initWithExpectedMessage:@"testValue"]
Sihui Liu
Comment 3
2021-12-23 16:40:34 PST
Created
attachment 447918
[details]
Patch for landing
Sihui Liu
Comment 4
2021-12-23 16:55:39 PST
Created
attachment 447921
[details]
Patch for landing
EWS
Comment 5
2021-12-23 17:50:35 PST
Committed
r287418
(
245553@main
): <
https://commits.webkit.org/245553@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 447921
[details]
.
Radar WebKit Bug Importer
Comment 6
2021-12-23 17:51:18 PST
<
rdar://problem/86870643
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug